package org.example;


import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;



@SpringBootApplication
public class WebCalculator {

	public static void main(String[] args) {
		SpringApplication.run(WebCalculator.class, args);
	}



}
