@startuml
allowmixing

package "Calculator Logic Module" #lightblue {
    class DescriptiveStatistics {
        + ValidationFunctions
        + LogicFunctions
    }

    class LinearRegression {
        + ValidationFunctions
        + LogicFunctions
    }

    DescriptiveStatistics ..> CalculationResult : uses
    LinearRegression ..> CalculationResult : uses
}

package "Calculator Logic Unit Tests via JUnit" #lightyellow {
    class LogicUnitTests {
        + DescriptiveStatistics_computeMean_ReceiveNullValueList_ThrowException()
        + DescriptiveStatistics_computeMean_ReceiveEmptyValueList_ThrowException()
        + DescriptiveStatistics_computeMean_ReceiveNonNumericValue_ThrowException()
        + LinearRegression_computeLinearRegressionFormula_ReceiveValidValues_ReturnsLinearRegressionFormula()
    }

    LogicUnitTests --> DescriptiveStatistics
    LogicUnitTests --> LinearRegression
}

package "Calculator Web Server App" #lightblue {
    package "src" {
        class WebCalculator {
            + main(args: String[])
        }

        class WebController {
            + computeMean(values: String): CalculationResult
            + computeSampleStandardDeviation(values: String): CalculationResult
            + computePopulationStandardDeviation(values: String): CalculationResult
            + computeZscore(values: String): CalculationResult
            + computeLinearRegression(values: String): CalculationResult
            + computePredictedY(values: String): CalculationResult
        }

        class Index.html {
        }

        WebController --> DescriptiveStatistics
        WebController --> LinearRegression
        WebController --> Index.html
    }

    WebCalculator ..> WebController 
}

package "Calculator End-To-End Tests via Playwright" #lightyellow {
    class CalculatorEndToEndTests {
        + CalculatorUI_PageTitle_ReturnsCalculator()
        + CWebCalculator_ComputeZScore_ReturnResult()
        + WebCalculator_PredictY_ReturnResult()
        + WebCalculator_ComputePopulationStdDev_ReturnsResult()
    }

    CalculatorEndToEndTests --> WebController 
}

cloud #yellow {
    hide circle
    class Browser
    Browser <--> WebController 
@enduml
